[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/anima/visual-editor/icons/Animation.svg" type="Texture" id=1]
[ext_resource path="res://addons/anima/visual-editor/editor/AnimaAddFrame.gd" type="Script" id=2]
[ext_resource path="res://addons/anima/visual-editor/icons/Delay.svg" type="Texture" id=3]
[ext_resource path="res://addons/anima/visual-editor/icons/Event.svg" type="Texture" id=4]

[node name="AnimaAddFrame" type="ColorRect"]
anchor_bottom = 1.0
rect_min_size = Vector2( 360, 0 )
color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 60.0
margin_top = 204.0
margin_right = 300.0
margin_bottom = 396.0
rect_min_size = Vector2( 240, 0 )
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="Button" parent="CenterContainer/ButtonsContainer"]
margin_right = 240.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( 124, 16 )
mouse_default_cursor_shape = 2
text = "Animation"
icon = ExtResource( 1 )

[node name="Delay" type="Button" parent="CenterContainer/ButtonsContainer"]
margin_top = 72.0
margin_right = 240.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( 124, 24 )
mouse_default_cursor_shape = 2
text = "Delay"
icon = ExtResource( 3 )

[node name="Event" type="Button" parent="CenterContainer/ButtonsContainer"]
margin_top = 144.0
margin_right = 240.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( 124, 24 )
mouse_default_cursor_shape = 2
text = "Event"
icon = ExtResource( 4 )

[connection signal="pressed" from="CenterContainer/ButtonsContainer/Animation" to="." method="_on_Animation_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonsContainer/Delay" to="." method="_on_Delay_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonsContainer/Event" to="." method="_on_Event_pressed"]
